fix(osm): deterministic mode-set ordering in OsmSegmentGraph.Segment